...
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_perm_contact_cal_grey600_18dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/yourName" />

        </LinearLayout>
...
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="Description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                tools:text="hello florent" />
        </LinearLayout>
...
